# C_sandbox

./: .gitignore  README.md
inc/: CMakeLists.txt  file.h  oop_car.c  oop_car.h
kmodules/: .Module.symvers.cmd  .hwkm.ko.cmd  .hwkm.mod.cmd  .hwkm.mod.o.cmd  .hwkm.o.cmd  .modules.order.cmd  Makefile  hwkm.c  hwkm.ko  hwkm.mod.c  modules.order
src/: CMakeLists.txt  main.c
src/IPC/: CMakeLists.txt  ipc.c
src/processes/: CMakeLists.txt  processes.c
src/threads/: CMakeLists.txt  threads.c  threads_binary_semaphore.c  threads_mutex_archive.c
